Created derive, fixed apache and ftp

--- a/storage/impero/virtualhosts.conf
+++ b/storage/impero/virtualhosts.conf
@@ -1,13 +1,10 @@
 <VirtualHost *:80>
-	ServerName impero.gonparty.eu.foobar.si
-	DocumentRoot test
+	ServerName impero.foobar.si
+	DocumentRoot /www/schtr4jh/impero.foobar.si/htdocs/
 </VirtualHost>
-
-
 
 <VirtualHost *:80>
 	ServerName gonparty.eu.foobar.si
-	DocumentRoot test
+	DocumentRoot /www/schtr4jh/gonparty.eu.foobar.si/htdocs/
 	ServerAlias hr.gonparty.eu.foobar.si eu.gonparty.eu.foobar.si si.gonparty.eu.foobar.si pinkchampagne.gonparty.eu.foobar.si gremonaparty.com.foobar.si
 </VirtualHost>
-
