--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     }
   ],
   "require": {
-    "pckg/backend": "dev-master"
+    "pckg/backend": "dev-master",
+    "jonnyw/php-phantomjs": "4.*"
   },
   "minimum-stability": "dev",
   "autoload": {
@@ -19,5 +20,16 @@
         "src/"
       ]
     }
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "PhantomInstaller\\Installer::installPhantomJS"
+    ],
+    "post-update-cmd": [
+      "PhantomInstaller\\Installer::installPhantomJS"
+    ]
+  },
+  "config": {
+    "bin-dir": "bin"
   }
 }
