--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     }
   ],
   "require": {
-    "pckg/backend": "dev-master",
-    "jonnyw/php-phantomjs": "4.*"
+    "pckg/backend": "dev-master"
   },
   "minimum-stability": "dev",
   "autoload": {
@@ -20,16 +19,5 @@
         "src/"
       ]
     }
-  },
-  "scripts": {
-    "post-install-cmd": [
-      "PhantomInstaller\\Installer::installPhantomJS"
-    ],
-    "post-update-cmd": [
-      "PhantomInstaller\\Installer::installPhantomJS"
-    ]
-  },
-  "config": {
-    "bin-dir": "bin"
   }
 }
