--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     }
   ],
   "require": {
-    "pckg/backend": "dev-master",
-    "jonnyw/php-phantomjs": "4.*"
+    "pckg/backend": "dev-master"
   },
   "minimum-stability": "dev",
   "autoload": {
