--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,7 @@ RewriteRule ^ - [L]
 
 # default handler # index.php, dev.php
 RewriteRule ^(.*)$ www/$1 [L]
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin http://bob.gonparty
+</IfModule>
