--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,27 @@
     }
   ],
   "require": {
-    "pckg/backend": "dev-master",
+    "pckg/framework": "dev-master",
+    "pckg/migrator": "dev-master",
+    "pckg/queue": "dev-master",
+    "pckg/mail": "dev-master",
+    "pckg/translator": "dev-master",
+    "pckg/auth": "dev-master",
+    "pckg/generic": "dev-master",
+    "pckg/helpers-js": "dev-master",
+    "pckg/helpers-less": "dev-master",
+    "pckg/import": "dev-master",
+    "pckg/payment": "dev-master",
     "pckg/tempus": "dev-master",
+    "jonnyw/php-phantomjs": "4.*",
+    "nesbot/carbon": "1.*",
+    "codeception/codeception": "dev-master",
+    "twbs/bootstrap": "3.*",
+    "components/jquery": "2.*",
+    "fortawesome/font-awesome": "4.*",
+    "bootstrap-select/bootstrap-select": "1.*",
+    "kraksoft/colorbox": "1.*",
+    "dimsemenov/magnific-popup": "dev-master",
     "robrichards/xmlseclibs": "^2.0",
     "aferrandini/phpqrcode": "^1.0"
   },
