--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "pckg/import": "dev-master",
     "pckg/payment": "dev-master",
     "pckg/tempus": "dev-master",
+    "pckg/charts": "dev-master",
     "jonnyw/php-phantomjs": "4.*",
     "nesbot/carbon": "1.*",
     "codeception/codeception": "dev-master",
