--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "eonasdan-bootstrap-datetimepicker": "^4.17.42",
     "dropzone": "^4.3.0",
     "chart.js": "^2.3.0",
-    "tinymce": "^4.5.4"
+    "tinymce": "^4.5.4",
+    "vue-router": "^2.3.0"
   }
 }
