--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# COMPOSER
+# DEPENDENCY MANAGERS - COMPOSER, BOWER, NODE
 vendor
 components
-
-# BOWER
 bower_components
+node_modules
 
 # WWW
 www/cache/**
