--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
     "dropzone": "^4.3.0",
     "chart.js": "^2.3.0",
     "tinymce": "^4.5.4",
-    "vue-router": "^2.3.0"
+    "vue-router": "^2.3.0",
+    "vue.draggable": "^2.11.0",
+    "Sortable": "^1.5.1"
   }
 }
