--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "dimsemenov/magnific-popup": "dev-master",
     "robrichards/xmlseclibs": "^2.0",
     "aferrandini/phpqrcode": "^1.0",
-    "mattzuba/php-trello": "^1.1"
+    "mattzuba/php-trello": "^1.1",
+    "defuse/php-encryption": "dev-master"
   },
   "minimum-stability": "dev",
   "autoload": {
